--- a/react/src/NavBar.css
+++ b/react/src/NavBar.css
@@ -1,3 +1,11 @@
 .NavBar {
   margin: 3px;
 }
+
+.Nav-Item {
+  margin: 5px;
+  padding: 5px;
+  background-color: white;
+  border: 2px black solid;
+  border-radius: 10px;
+}
