--- a/react/src/NavBar.css
+++ b/react/src/NavBar.css
@@ -1,11 +1,35 @@
-.NavBar {
-  margin: 3px;
+.NavBar-container {
+  width: 100%;
+  padding: 15px;
+  display: inline;
+  background-color: black;
+  top: 0;
+  position: fixed;
+  overflow: hidden;
 }
 
-.Nav-Item {
-  margin: 5px;
-  padding: 5px;
-  background-color: white;
-  border: 2px black solid;
-  border-radius: 10px;
+.NavBar {
+  text-align: center;
+  
+}
+
+.NavLink {
+  text-decoration: none;
+  float: left;
+  color: white;
+  background-color: black;
+  padding: 10px;
+}
+
+.NavLink-home {
+  text-decoration: none;
+  float: left;
+  color: white;
+  background-color: green;
+  padding: 10px;
+  clear: both;
+}
+
+.NavLink a:hover {
+  background-color: #111;
 }
