--- a/react/src/Card.css
+++ b/react/src/Card.css
@@ -1,12 +1,8 @@
-/* .container {
-    background-color: aquamarine;
-    border: solid 3px gold;
+.container {
     border-radius: 10px;
-    color: black;
-    font-family: helvetica;
     padding: 20px;
     padding-left: 30px;
-} */
+}
 
 .card-text {
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
