--- a/frontend/src/Card.css
+++ b/frontend/src/Card.css
@@ -1,39 +1,22 @@
-.container {
-    border-radius: 10px;
-    padding: 20px;
-    padding-left: 30px;
-}
-
-.card-head {
-    size: 20px;
-}
-
-.card-text {
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-}
-
-.card-image {
-    border-radius: 10px;
-    size: 100px;
-}
-
-.genBtn {
+/* .genBtn {
     font-size: large;
-    background-color: gold;
+    background-color: rgb(250, 249, 241);
     color: black;
     padding: 8px;
     border-radius: 10px;
     border: solid 3px black;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+} */
+
+.flip-container {
+    background-color: white;
+    padding: 15px;
 }
 
-/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
     background-color: transparent;
-    width: 300px;
-    height: 200px;
-    border: 1px solid #f1f1f1;
-    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+    width: 500px;
+    height: 400px;
   }
   
   /* This container is needed to position the front and back side */
@@ -42,11 +25,11 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: transform 0.8s;
+    transition: transform 0.3s;
     transform-style: preserve-3d;
   }
   
-  /* Do an horizontal flip when you move the mouse over the flip box container */
+  /* Do a horizontal flip when you move the mouse over the flip box container */
   .flip-card:hover .flip-card-inner {
     transform: rotateY(180deg);
   }
@@ -61,8 +44,9 @@
   }
 
   .flip-image {
-    height: 500px;
-    width: 500px;
+      height: 100%;
+      width: 100%;
+      border-radius: 10px;
   }
   
   /* Style the front side (fallback if image is missing) */
@@ -73,7 +57,20 @@
   
   /* Style the back side */
   .flip-card-back {
-    background-color: dodgerblue;
+    background-color: white;
+    /* background-image: url(dice-border.jpg);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat; */
     color: white;
     transform: rotateY(180deg);
+    align-items: left;
+    text-align: left;
+    border-radius: 10px;
+    
+  }
+
+  .flip-text {
+      color: black;
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
