--- a/frontend/src/NavBar.css
+++ b/frontend/src/NavBar.css
@@ -1,8 +1,7 @@
 .NavBar-container {
   width: 100%;
-  padding: 5px;
   display: inline;
-  background-color: black;
+  background-color: #5F4B66;
   top: 0;
   position: fixed;
   overflow: hidden;
@@ -10,26 +9,44 @@
 
 .NavBar {
   text-align: center;
-  
+  border-bottom: 1px, solid, white;
 }
 
 .NavLink {
   text-decoration: none;
   float: left;
   color: white;
-  background-color: black;
   padding: 10px;
+}
+
+.NavLink:hover {
+  background-color: #F6AE2D;
+  color: black;
 }
 
 .NavLink-home {
   text-decoration: none;
   float: left;
   color: white;
-  background-color: green;
   padding: 10px;
   clear: both;
 }
 
-.NavLink a:hover {
-  background-color: #111;
+.NavLink-home:hover {
+  background-color: #F6AE2D;
+  color:black;
 }
+
+.chatroom-link {
+  float: right;
+  text-decoration: none;
+  color: white;
+  padding: 10px;
+  margin-right: 30px;
+}
+
+.chatroom-link:hover{
+  background-color: #F6AE2D;
+  color:black;
+}
+
