--- a/frontend/src/SignUp.css
+++ b/frontend/src/SignUp.css
@@ -9,22 +9,23 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 15px;
+  padding: 25px;
   background: #fff;   
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
 }
 
-.heading {
-  color: cornflowerblue;
+.form-heading {
+  color: black;
+  font-size: 55px;
 }
 
 input {
   width: 90%;
   background-color: whitesmoke;
   color: black;
-  padding: 14px 20px;
-  margin: 8px 0;
+  padding: 16px 20px;
+  margin: 10px 0;
   border: none;
   border-radius: 4px;
   cursor: auto;
