--- a/frontend/src/TextContainer.css
+++ b/frontend/src/TextContainer.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   margin-left: 100px;
-  color: white;
   height: 60%;
   justify-content: space-between;
 }
@@ -18,11 +17,11 @@
   align-items: center;
 }
 
-.activeContainer img {
+.activeContainer {
   padding-left: 10px;
 }
 
-.textContainer h1 {
+.textContainer {
   margin-bottom: 0px;
 }
 
