--- a/frontend/src/shared/LoadingSpinner.css
+++ b/frontend/src/shared/LoadingSpinner.css
@@ -1,7 +1,15 @@
-.LoadingSpinner {
-  margin: 200px auto 0 auto;
-  color: tomato;
-  font-size: 24pt;
-  font-weight: bold;
-  text-align: center;
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 0.33s linear infinite;
+  margin-left: 500px;
+  margin-top: 150px;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
